#2992: Introduce new fields into the study table. Submitted by: asergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3605 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/admin_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/admin_en.properties
@@ -47,6 +47,12 @@ phaseII= Phase II
 phaseIII_IV=Phase III/Phase IV
 phaseIII=Phase III
 phaseIV=Phase IV
+medicalDevice=Medical Device
+patientRegistry=Patient Registry
+investigatorsStudy=Investigator's Study
+nutraceuticals=Nutraceuticals
+cosmetics=Cosmetics
+otherType=Other
 placebo=Placebo
 prevention=Prevention
 procedure=Procedure
