--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -109,6 +109,8 @@ br_if_you_owner_CRF_version = <br>If you are the owner of a CRF version, and the
 
 brief_title_existed = A Study with this Brief Title {0} already exists in the database.  Please choose another Brief Title.
 
+study_name_exists = A Study with this Study Name {0} already exists in the database.  Please choose another Study Name.
+
 can_only_be_either_0_or_1 = can only be either 0 or 1.
 
 cannot_be_blank_if_VALIDATION_not_blank = It cannot be blank if VALIDATION is not blank.
