--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -22,7 +22,7 @@ rest.emailWhen.valueDescription=complete -> Send Email when CRF is completed, si
 rest.emailWhenWithNone.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
 rest.propagateChange.valueDescription=1 -> Yes, unconditionally, 2 -> Yes, but preserve different settings, 3 -> No
 rest.protocolType.valueDescription=0 -> Interventional, 1 -> Observational
-rest.phase.valueDescription=0 -> N/A, 1 -> Phase I, 2 -> Phase I / Phase II, 3 -> Phase II, 4 -> Phase II / Phase III, 5 -> Phase III, 6 -> Phase III / Phase IV, 7 -> Phase IV
+rest.phase.valueDescription=0 -> N/A, 1 -> Phase I, 2 -> Phase I / Phase II, 3 -> Phase II, 4 -> Phase II / Phase III, 5 -> Phase III, 6 -> Phase III / Phase IV, 7 -> Phase IV, 8 -> Medical Device, 9 -> Patient Registry, 10 -> Investigator's Study, 11 -> Nutraceuticals, 12 -> Cosmetics, 13 -> Other
 rest.purpose.1.valueDescription=0 -> Empty Value, 1 -> Treatment, 2 -> Prevention, 3 -> Diagnosis, 5 -> Supportive Care, 6 -> Screening, 9 -> Health Services Research, 10 -> Basic Science, 11-> Other
 rest.purpose.0.valueDescription=0 -> Empty Value, 6 -> Screening, 7 -> Natural History, 8 -> Psychosocial
 rest.purpose.1.values=0,1,2,3,5,6,9,10,11
@@ -193,6 +193,8 @@ rest.studyservice.createstudy.missing.startdate=Start Date parameter is missing.
 rest.studyservice.createstudy.empty.startdate=Start Date parameter is empty.
 rest.studyservice.createstudy.missing.totalenrollment=Total Enrollment parameter is missing.
 rest.studyservice.createstudy.empty.totalenrollment=Total Enrollment parameter is empty.
+rest.studyservice.createstudy.missing.brieftitle=Brief Title parameter is missing.
+rest.studyservice.createstudy.empty.brieftitle=Brief Title parameter is empty.
 
 rest.studyservice.editstudy.missing.studyid=Study Id parameter is missing.
 rest.studyservice.editstudy.empty.studyid=Study Id parameter is empty.
