--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2167,6 +2167,8 @@ study_parameter_configuration = Study Parameter Configuration
 
 study_phase = Study Phase
 
+study_type = Study Type
+
 study_record_ID = Study Record ID
 
 study_requested = Study Requested
