Fixed #3003: Study API: Restore_Study. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3607 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -199,6 +199,15 @@ rest.studyservice.createstudy.empty.brieftitle=Brief Title parameter is empty.
 
 rest.studyservice.editstudy.missing.studyid=Study Id parameter is missing.
 rest.studyservice.editstudy.empty.studyid=Study Id parameter is empty.
-rest.studyservice.editstudy.studyDoesNotExist=The study with id ''{0}'' does not exist.
-rest.studyservice.editstudy.studyIsSite=The study with id ''{0}'' is site.
-rest.studyservice.editstudy.youDoNotHaveRightsToEditThisStudy=You don't have rights to edit this study.
+
+rest.studyservice.remove.missing.id=Id parameter is missing.
+rest.studyservice.remove.empty.id=Id parameter is empty.
+
+rest.studyservice.restore.missing.id=Id parameter is missing.
+rest.studyservice.restore.empty.id=Id parameter is empty.
+
+rest.studyservice.youCannotRemoveLockedStudy=You cannot remove locked study.
+rest.studyservice.studyIsNotInRemovedState=Study is not in removed state.
+rest.studyservice.studyDoesNotExist=The study with id ''{0}'' does not exist.
+rest.studyservice.studyIsSite=The study with id ''{0}'' is site.
+rest.studyservice.youDoNotHaveRightsToAccessThisStudy=You don't have rights to access this study.
