Fixed #2698: Study API: Query Studies. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3608 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -6,6 +6,7 @@ rest.wrongDateParameterType=Parameter ''{0}'' should be a date in the following 
 rest.wrongParameterType=Parameter ''{0}'' should be {1}.
 
 ##RequestParametersValidator
+rest.scopeIsRequired=Scope is required.
 rest.eachRequestMustHaveVersionParameter=Each request must have ''{0}'' parameter.
 rest.possibleValuesAre=The possible values for parameter ''{0}'' are the ''{1}''.
 rest.possibleValuesWithDescriptionsAre=The possible values for parameter ''{0}'' are the ''{1}'' where the ''{2}''.
