Fixed #3008: AddCrf method displays wrong descriptions when dataEntryQuality or emailWhen parameters have wrong values. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3611 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -18,9 +18,9 @@ rest.atLeastOneNotRequiredParameterShouldBeSpecified=At least one not required p
 rest.userType.valueDescription=1 -> ADMINISTRATOR, 2 -> USER
 rest.roles.valueDescription=2 -> STUDY_ADMINISTRATOR, 6 -> STUDY_MONITOR, 7 -> STUDY_CODER, 8 -> STUDY_EVALUATOR, 10 -> STUDY_SPONSOR, 4 -> INVESTIGATOR, 5 -> CLINICAL_RESEARCH_COORDINATOR, 9 -> SITE_MONITOR
 rest.sourceDataVerification.valueDescription=1 -> Entire CRF, 2 -> Specific Items, 3 -> Not Required
-rest.dataEntryQuality.valueDescription=dde -> Double Data Entry, evaluation -> CRF data evaluation, none -> Option is not used
+rest.dataEntryQuality.valueDescription=dde -> Double Data Entry, evaluation -> CRF data evaluation
 rest.dataEntryQualityWithNone.valueDescription=dde -> Double Data Entry, evaluation -> CRF data evaluation, none -> Option is not used
-rest.emailWhen.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
+rest.emailWhen.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed
 rest.emailWhenWithNone.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
 rest.propagateChange.valueDescription=1 -> Yes, unconditionally, 2 -> Yes, but preserve different settings, 3 -> No
 rest.protocolType.valueDescription=0 -> Interventional, 1 -> Observational
