--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -265,6 +265,9 @@ do_not_show_this_message_anymore  = \u0411\u043e\u043b\u044c\u0448\u0435 \u043d\
 #duplicate  =  A duplicate
 #duplicate  =  Дублер 
 duplicate  =  \u0414\u0443\u0431\u043b\u0435\u0440 
+#dynamic_group_class_was_deleted_successfully = Dynamic group class was deleted successfully.
+#dynamic_group_class_was_deleted_successfully = Динамический класс группы был упешно удалён.
+dynamic_group_class_was_deleted_successfully = \u0414\u0438\u043d\u0430\u043c\u0438\u0447\u0435\u0441\u043a\u0438\u0439 \u043a\u043b\u0430\u0441\u0441 \u0433\u0440\u0443\u043f\u043f\u044b \u0431\u044b\u043b \u0443\u043f\u0435\u0448\u043d\u043e \u0443\u0434\u0430\u043b\u0451\u043d\u002e
 #email_body_1  =  Study:
 #email_body_1  =  Исследование
 email_body_1  =  \u0418\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0435
@@ -877,6 +880,9 @@ please_choose_a_subject_group_class_to_edit  = \u041f\u043e\u0436\u0430\u043b\u0
 #please_choose_a_subject_group_class_to_remove  =  Please choose a subject group class to remove.
 #please_choose_a_subject_group_class_to_remove  = Пожалуйста выберите класс группы субъекта для удаления.
 please_choose_a_subject_group_class_to_remove  = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043a\u043b\u0430\u0441\u0441 \u0433\u0440\u0443\u043f\u043f\u044b \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430 \u0434\u043b\u044f \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u044f\u002e
+#please_choose_a_study_group_class_to_delete = Please choose a study group class to delete.
+#please_choose_a_study_group_class_to_delete = Пожалуйста выберите класс группы для удаления.
+please_choose_a_study_group_class_to_delete = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u0432\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043A\u043B\u0430\u0441\u0441 \u0433\u0440\u0443\u043F\u043F\u044B \u0434\u043B\u044F \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F\u002e
 #please_choose_a_subject_group_class_to_restore  =  Please choose a subject group class to restore.
 #please_choose_a_subject_group_class_to_restore  = Пожалуйста выберите класс группы субъекта для восстановления.
 please_choose_a_subject_group_class_to_restore  = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043a\u043b\u0430\u0441\u0441 \u0433\u0440\u0443\u043f\u043f\u044b \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430 \u0434\u043b\u044f \u0432\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u044f\u002e
@@ -1124,8 +1130,11 @@ subject_event_data_is_as_it_was_before  = \u0414\u0430\u043d\u043d\u044b\u0435 \
 #subject_event_signed  = Все события субъекта исследования обновлены да статуса "Подписан"
 subject_event_signed  = \u0412\u0441\u0435 \u0441\u043e\u0431\u044b\u0442\u0438\u044f \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u044b \u0434\u0430 \u0441\u0442\u0430\u0442\u0443\u0441\u0430 "\u041f\u043e\u0434\u043f\u0438\u0441\u0430\u043d"
 #subject_group_class_only_added_top_level  =  Subject group class may only be added to top-level Studies.
-#subject_group_class_only_added_top_level  = Класс группы субхъекта может быть добавлен только на уровне исследования.
+#subject_group_class_only_added_top_level  = Класс группы субъекта может быть добавлен только на уровне исследования.
 subject_group_class_only_added_top_level  = \u041a\u043b\u0430\u0441\u0441 \u0433\u0440\u0443\u043f\u043f\u044b \u0441\u0443\u0431\u0445\u044a\u0435\u043a\u0442\u0430 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0434\u043e\u0431\u0430\u0432\u043b\u0435\u043d \u0442\u043e\u043b\u044c\u043a\u043e \u043d\u0430 \u0443\u0440\u043e\u0432\u043d\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f\u002e
+#subject_group_class_was_deleted_successfully = Subject group class was deleted successfully.
+#subject_group_class_was_deleted_successfully = Класс группы субъекта был упешно удалён.
+subject_group_class_was_deleted_successfully = \u041a\u043b\u0430\u0441\u0441 \u0433\u0440\u0443\u043f\u043f\u044b \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430 \u0431\u044b\u043b \u0443\u043f\u0435\u0448\u043d\u043e \u0443\u0434\u0430\u043b\u0451\u043d\u002e
 #subject_not_reassigned  =  The subject {0} has not been reassigned. There is no such study/site.
 #subject_not_reassigned  = Субъект  {0} не был переприкреплен. Такого исследоваия/центра не существует.
 subject_not_reassigned  = \u0421\u0443\u0431\u044a\u0435\u043a\u0442  {0} \u043d\u0435 \u0431\u044b\u043b \u043f\u0435\u0440\u0435\u043f\u0440\u0438\u043a\u0440\u0435\u043f\u043b\u0435\u043d\u002e \u0422\u0430\u043a\u043e\u0433\u043e \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0438\u044f/\u0446\u0435\u043d\u0442\u0440\u0430 \u043d\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442\u002e
