Fixed #3027: Error messages for CRFs with SCD errors should be more informative. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3631 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -520,8 +520,8 @@ importcrf.regexpIsInvalidRegularExpression=Item ''{0}'' has an invalid regular e
 importcrf.validationColumnHasInvalidRegularExpression=Item ''{0}'' has an invalid regular expression.
 importcrf.requiredIsNotValid=Required is not valid for item ''{0}''.
 importcrf.itemDisplayStatusIsNotValid=Display status is not valid for item ''{0}''.
-importcrf.controlResponseValueIsNotValid=Control response value is not valid for item ''{0}''.
-importcrf.controlItemNameIsNotValid=Control item name is not valid for item ''{0}''.
+importcrf.controlResponseValueIsNotValid=Response value ''{0}'' for item ''{1}'' is not valid because it doesn’t exist in the referenced item ''{2}''
+importcrf.controlItemNameIsNotValid=Referenced item ''{0}'' is not valid for item ''{1}''.
 importcrf.simpleConditionalDisplayIsNotValid=SCD is not valid for item ''{0}''.
 importcrf.ontologyNameIsNotValid=Ontology name is not valid for item ''{0}''.
 importcrf.needToUpdateCodingItemTypeToCode=Need to update coding item type to code for item ''{0}''.
