Fixed #3020: CRF API: remove CRF / CRF Version and restore CRF / CRF Version. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3634 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -62,6 +62,8 @@ rest.userservice.userDoesNotExist=User does not exist.
 rest.userservice.itIsForbiddenToPerformThisOperationOnRootUser=It is forbidden to perform this operation on 'root' user.
 rest.userservice.itIsForbiddenToPerformThisOperationOnYourself=It is forbidden to perform this operation on yourself.
 rest.userservice.itIsForbiddenToPerformThisOperationOnUserThatDoesNotBelongToCurrentUserScope=It is forbidden to perform this operation on user that does not belong to current user's scope.
+rest.userservice.youCannotRemoveLockedUser=You cannot remove locked User.
+rest.userservice.userIsNotInRemovedState=User is not in removed state.
 
 rest.userservice.createuser.codingIsNotAvailable=Medical Coding is not available for current scope.
 rest.userservice.createuser.evaluationIsNotAvailable=Evaluation is not available for current scope.
@@ -108,6 +110,10 @@ rest.eventservice.crfNameIsNotFound=Crf is not found with name ''{0}''.
 rest.eventservice.eventDefinitionCrfIsNotFoundInStudy=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in study ''{2}''.
 rest.eventservice.eventDefinitionCrfIsNotFoundInSite=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in site ''{2}''.
 rest.eventservice.eventDefinitionCrfIsNotAvailable=Event Definition Crf for Crf ''{0}'' is not available in study event definition ''{1}''.
+rest.eventservice.youCannotRemoveLockedEDC=You cannot remove locked Event Definition Crf.
+rest.eventservice.edcIsNotInRemovedState=Event Definition Crf is not in removed state.
+rest.eventservice.youCannotRemoveLockedSED=You cannot remove locked Study Event Definition.
+rest.eventservice.sedIsNotInRemovedState=Study Event Definition is not in removed state.
 
 rest.eventservice.createevent.missing.name=Name parameter is missing.
 rest.eventservice.createevent.missing.type=Type parameter is missing.
@@ -164,6 +170,18 @@ rest.eventservice.deletecrf.empty.eventid=Event Id parameter is empty.
 rest.eventservice.deletecrf.missing.crfname=Crf Name parameter is missing.
 rest.eventservice.deletecrf.empty.crfname=Crf Name parameter is empty.
 
+rest.crfservice.cannotPerformOperationBecauseCRFIsNotAvailable=Cannot perform operation because the CRF is not available.
+rest.crfservice.crfDoesNotBelongToCurrentScope=Crf with id ''{0}'' does not belong to current scope.
+rest.crfservice.crfVersionDoesNotBelongToCurrentScope=Crf Version with id ''{0}'' does not belong to current scope.
+rest.crfservice.crfWithIdDoesNotExist=Crf with id ''{0}'' does not exist.
+rest.crfservice.crfVersionWithIdDoesNotExist=Crf Version with id ''{0}'' does not exist.
+rest.crfservice.youCannotRemoveLockedCRF=You cannot remove locked CRF.
+rest.crfservice.crfIsNotInRemovedState=CRF is not in removed state.
+rest.crfservice.youCannotRemoveLockedCRFVersion=You cannot remove locked CRF Version.
+rest.crfservice.crfVersionIsNotInRemovedState=CRF Version is not in removed state.
+rest.crfservice.youCannotLockRemovedCRFVersion=You cannot lock removed CRF Version.
+rest.crfservice.crfVersionIsNotInLockedState=CRF Version is not in locked state.
+
 rest.crfservice.importcrf.missing.jsondata=Json Data parameter is missing.
 rest.crfservice.importcrf.empty.jsondata=Json Data parameter is empty.
 rest.crfservice.importcrf.crfNameDoesNotExist=Crf with name ''{0}'' does not exist.
@@ -173,6 +191,30 @@ rest.crfservice.importcrf.operationFailed=Failed to import new crf.
 rest.crfservice.importcrfversion.missing.jsondata=Json Data parameter is missing.
 rest.crfservice.importcrfversion.empty.jsondata=Json Data parameter is empty.
 rest.crfservice.importcrfversion.operationFailed=Failed to import new crf version.
+
+rest.crfservice.crf.missing.id=Id parameter is missing.
+rest.crfservice.crf.empty.id=Id parameter is empty.
+
+rest.crfservice.removecrf.missing.id=Id parameter is missing.
+rest.crfservice.removecrf.empty.id=Id parameter is empty.
+
+rest.crfservice.restorecrf.missing.id=Id parameter is missing.
+rest.crfservice.restorecrf.empty.id=Id parameter is empty.
+
+rest.crfservice.crfversion.missing.id=Id parameter is missing.
+rest.crfservice.crfversion.empty.id=Id parameter is empty.
+
+rest.crfservice.removecrfversion.missing.id=Id parameter is missing.
+rest.crfservice.removecrfversion.empty.id=Id parameter is empty.
+
+rest.crfservice.restorecrfversion.missing.id=Id parameter is missing.
+rest.crfservice.restorecrfversion.empty.id=Id parameter is empty.
+
+rest.crfservice.lockcrfversion.missing.id=Id parameter is missing.
+rest.crfservice.lockcrfversion.empty.id=Id parameter is empty.
+
+rest.crfservice.unlockcrfversion.missing.id=Id parameter is missing.
+rest.crfservice.unlockcrfversion.empty.id=Id parameter is empty.
 
 rest.studyservice.createstudy.userHasSiteLevelRoles=User ''{0}'' has site level roles that''s why he cannot be a study administrator.
 rest.studyservice.createstudy.userDoesNotExist=User ''{0}'' does not exist.
