Fixed #2706: Rule Studio is slow to open with many studies. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3635 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3924,7 +3924,11 @@ rs.validation.discrepancyAction = Discrepancy Action
 rs.validation.emailAction = Email Action
 rs.validation.insertAction = Insert Action
 rs.validation.showHideAction = Show/Hide Action
-
+rs.validation.missingEventsData = Please select Study from which Events should be loaded.
+rs.validation.missingCRFsData = Please select Event from which CRFs should be loaded.
+rs.validation.missingVersionsData = Please select CRF from which Versions should be loaded.
+rs.validation.missingItemsData = Please select CRF Version from which Items should be loaded.
+rs.validation.missingSessionStudies = Unable to open saved Studies data. Your rule context info will be reset.
 
 data_entry_quality = Data Entry Quality
 crf_data_evaluation = CRF data evaluation
