Fixes #3039: Error "HTTP Status 500 - JSONObject["oid"] not found." is shown if user enters some value to insert, but Destination Item is empty. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3643 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3924,6 +3924,7 @@ rs.validation.discrepancyAction = Discrepancy Action
 rs.validation.emailAction = Email Action
 rs.validation.insertAction = Insert Action
 rs.validation.showHideAction = Show/Hide Action
+rs.validation.missingDestination = Please select Destination item.
 rs.validation.missingEventsData = Please select Study from which Events should be loaded.
 rs.validation.missingCRFsData = Please select Event from which CRFs should be loaded.
 rs.validation.missingVersionsData = Please select CRF from which Versions should be loaded.
