Fixed #2678: "Update Event Definition" page refactoring.. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3647 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4166,9 +4166,9 @@ codeRef.CTCAE.GR.value.5=Fatal or Grade 5
 dataEntry.thisCrfContainsPDForTheFollowingPages=This CRF contains partial data on the following page(s)
 dataEntry.thisCrfContainsPDForSomePages=This CRF contains partial data on some page(s).
 
-propagate_change = Propagate change
-yes_unconditionally = Yes, unconditionally
-yes_preserve_different = Yes, but preserve different settings
+propagate_change.1 = Update all sites configuration
+propagate_change.2 = Update only the sites that were not specially configured
+propagate_change.3 = Don't update any site configuration
 
 data_is_present_for_this_crf = Some data is present for this CRF. Please delete all data first.
 data_entry_has_been_started_for_this_event_definition_crf = Data Entry has been started into this Event Definition CRF for the following subject:
@@ -4225,3 +4225,7 @@ integer.3 = 3
 integer.4 = 4
 integer.5 = 5
 integer.6 = 6
+
+confirmation_message = Confirmation Message
+propagate_change_message.1 = You changed the configuration of Event CRFs.
+propagate_change_message.2 = Do you want to update all your sites with the new configuration?
