Fixed #2979: Study API: Add ability to specify study DN Descriptions. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3648 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -639,6 +639,12 @@ please_contact_sysadmin_for_more_information = Please contact the System Adminis
 
 please_contact_sysadmin_questions = Please contact the System Administrator if you have questions.
 
+please_correct_the_duplicate_description = Please correct the duplicate description.
+
+description_exceeds_maximum_length = Description may have maximum 255 characters.
+
+descriptions_quantity_error = You can specify maximum 26 descriptions.
+
 please_correct_the_duplicate_description_found_in_row = Please correct the duplicate description found in row
 
 please_correct_the_duplicate_name_found_in_row = Please correct the duplicate name found in row
