--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -1,4 +1,7 @@
-﻿##PermissionChecker
+﻿##RestAdvice
+rest.system.error=System error has occurred.
+
+##PermissionChecker
 rest.userShouldBeAuthenticated=User should be authenticated.
 
 ##RestConversionService
@@ -13,6 +16,7 @@ rest.possibleValuesWithDescriptionsAre=The possible values for parameter ''{0}''
 rest.thereIsTypoInTheParameter=There is a typo in the parameter ''{0}''.
 rest.parameterIsNotSupported=Parameter ''{0}'' is not supported.
 rest.atLeastOneNotRequiredParameterShouldBeSpecified=At least one not required parameter should be specified.
+rest.parametersAreOutOfSync=Parameters ''{0}'' are out of sync. They must have the same quantity of values.
 
 ##valueDescriptions of the @PossibleValues
 rest.userType.valueDescription=1 -> ADMINISTRATOR, 2 -> USER
