Fixed #3010: Transform child items into simple items when CRF is uploaded. Submitted by: aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3649 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
@@ -2046,8 +2046,8 @@ empty_rows_in_spreedsheet  = \u6709\u51e0\u4e2a\u65e0\u6548\u7684\u884c\u5728\u6
 #error_message_cannot_update_crf_version = Cannot update CRF version for the Subject.
 #error_message_cannot_update_crf_version = 无法更新该对象的CRF版本。
 error_message_cannot_update_crf_version = \u65e0\u6cd5\u66f4\u65b0\u8be5\u5bf9\u8c61\u7684\u0043\u0052\u0046\u7248\u672c\u3002
-#nested_parent_id = Nested Parent items are not supported by OpenClinica (row\u0020
-#nested_parent_id = 嵌套的父项不被该系统支持OpenClinica (行\u0020
+#nested_parent_id = Nested Parent items are not supported by ClinCapture (row\u0020
+#nested_parent_id = 嵌套的父项不被该系统支持ClinCapture (行\u0020
 nested_parent_id = \u5d4c\u5957\u7684\u7236\u9879\u4e0d\u88ab\u8be5\u7cfb\u7edf\u652f\u6301\u004f\u0070\u0065\u006e\u0043\u006c\u0069\u006e\u0069\u0063\u0061 \u0028\u884c\\u0020
 #nested_parent_id_1 = ). Please change the value.
 #nested_parent_id_1 = ).请更改此值。
