--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -1,4 +1,3 @@
-
 crfName = CRF name
 
 CRF_NAME_column = CRF_NAME column
@@ -1278,7 +1277,7 @@ empty_rows_in_spreedsheet = There were several invalid rows in your spreadsheet.
 error_message_cannot_update_crf_version=Cannot update CRF version for the Subject.
 
 
-nested_parent_id=Nested Parent items are not supported by OpenClinica (row\u0020
+nested_parent_id=Nested Parent items are not supported by ClinCapture (row\u0020
 nested_parent_id_1=). Please change the value.
 parent_id=The Parent item specified on row\u0020
 parent_id_1= \u0020does not exist. Please update the value.
@@ -1287,10 +1286,9 @@ items_worksheet_with_dot = Items sheet.\u0020
 group_in_several_sections=Items of one repeating group spread over several sections. Check items in Group '
 default_value_wrong_select = Only one Default_value is allowed for 'single-select' type in DEFAULT_VALUE column at\u0020
 default_value_wrong_select_1 = Default_value is not part of response options set at row\u0020
-default_value_not_allowed = OpenClinica does not support DEFAULT_VALUES with 'calculation', 'group-calculation', 'instant-calculation' and 'file' RESPONSE_TYPES. Change the RESPONSE_TYPE for this item \u0020
+default_value_not_allowed = ClinCapture does not support DEFAULT_VALUES with 'calculation', 'group-calculation', 'instant-calculation' and 'file' RESPONSE_TYPES. Change the RESPONSE_TYPE for this item \u0020
 PHI_column= PHI column value\u0020
 units_length_error=UNITS field text cannot be more than 64 characters
-
 
 #verifyUniqueItemPlacementInGroups_1=Error found at row \"
 #verifyUniqueItemPlacementInGroups_2=" Items sheet. Item belong to a Group (Group Label\ 
