--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -2067,7 +2067,7 @@ empty_rows_in_spreedsheet  = \u0412 \u0432\u0430\u0448\u0435\u043c \u0444\u0430\
 #error_message_cannot_update_crf_version = Cannot update CRF version for the Subject.
 #error_message_cannot_update_crf_version = Невозможно обновить версию ИРК для субъекта
 error_message_cannot_update_crf_version = \u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u043e\u0431\u043d\u043e\u0432\u0438\u0442\u044c \u0432\u0435\u0440\u0441\u0438\u044e \u0418\u0420\u041a \u0434\u043b\u044f \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430
-#nested_parent_id = Nested Parent items are not supported by OpenClinica (row\u0020
+#nested_parent_id = Nested Parent items are not supported by ClinCapture (row\u0020
 #nested_parent_id = Встроенные родительские переменные не поддерживаются ClinCapture (строка\u0020
 nested_parent_id = \u0412\u0441\u0442\u0440\u043e\u0435\u043d\u043d\u044b\u0435 \u0440\u043e\u0434\u0438\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0435 \u043f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u044b\u0435 \u043d\u0435 \u043f\u043e\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u044e\u0442\u0441\u044f \u0043\u006c\u0069\u006e\u0043\u0061\u0070\u0074\u0075\u0072\u0065 \u0028\u0441\u0442\u0440\u043e\u043a\u0430\\u0075\u0030\u0030\u0032\u0030
 #nested_parent_id_1 = ). Please change the value.
