remove eclipse workspace warnings
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3652 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -118,6 +118,7 @@ rest.eventservice.youCannotRemoveLockedEDC=You cannot remove locked Event Defini
 rest.eventservice.edcIsNotInRemovedState=Event Definition Crf is not in removed state.
 rest.eventservice.youCannotRemoveLockedSED=You cannot remove locked Study Event Definition.
 rest.eventservice.sedIsNotInRemovedState=Study Event Definition is not in removed state.
+rest.eventservice.crfDoesNotBelongToCurrentScope=Crf ''{0}'' does not belong to current scope.
 
 rest.eventservice.createevent.missing.name=Name parameter is missing.
 rest.eventservice.createevent.missing.type=Type parameter is missing.
@@ -175,7 +176,7 @@ rest.eventservice.deletecrf.missing.crfname=Crf Name parameter is missing.
 rest.eventservice.deletecrf.empty.crfname=Crf Name parameter is empty.
 
 rest.crfservice.cannotPerformOperationBecauseCRFIsNotAvailable=Cannot perform operation because the CRF is not available.
-rest.crfservice.crfDoesNotBelongToCurrentScope=Crf with id ''{0}'' does not belong to current scope.
+rest.crfservice.crfWithIdDoesNotBelongToCurrentScope=Crf with id ''{0}'' does not belong to current scope.
 rest.crfservice.crfVersionDoesNotBelongToCurrentScope=Crf Version with id ''{0}'' does not belong to current scope.
 rest.crfservice.crfWithIdDoesNotExist=Crf with id ''{0}'' does not exist.
 rest.crfservice.crfVersionWithIdDoesNotExist=Crf Version with id ''{0}'' does not exist.
