--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -119,6 +119,10 @@ rest.eventservice.edcIsNotInRemovedState=Event Definition Crf is not in removed 
 rest.eventservice.youCannotRemoveLockedSED=You cannot remove locked Study Event Definition.
 rest.eventservice.sedIsNotInRemovedState=Study Event Definition is not in removed state.
 rest.eventservice.crfDoesNotBelongToCurrentScope=Crf ''{0}'' does not belong to current scope.
+rest.eventservice.passAllSEDIds=You should pass all Study Event Definition Ids that belong to current scope.
+rest.eventservice.passAllCRFIds=You should pass all CRF Ids that belong to Study Event Definition with id ''{0}''.
+rest.eventservice.missedSEDId=Study Event Definition Id ''{0}'' is missed.
+rest.eventservice.missedCRFId=CRF Id ''{0}'' is missed in the Study Event Definition with id ''{1}''.
 
 rest.eventservice.createevent.missing.name=Name parameter is missing.
 rest.eventservice.createevent.missing.type=Type parameter is missing.
@@ -174,6 +178,14 @@ rest.eventservice.deletecrf.missing.eventid=Event Id parameter is missing.
 rest.eventservice.deletecrf.empty.eventid=Event Id parameter is empty.
 rest.eventservice.deletecrf.missing.crfname=Crf Name parameter is missing.
 rest.eventservice.deletecrf.empty.crfname=Crf Name parameter is empty.
+
+rest.eventservice.orderevents.empty.id=Id parameter is empty.
+rest.eventservice.orderevents.missing.id=Id parameter is missing.
+
+rest.eventservice.ordercrfs.empty.eventid=Event Id parameter is empty.
+rest.eventservice.ordercrfs.missing.eventid=Event Id parameter is missing.
+rest.eventservice.ordercrfs.empty.id=Id parameter is empty.
+rest.eventservice.ordercrfs.missing.id=Id parameter is missing.
 
 rest.crfservice.cannotPerformOperationBecauseCRFIsNotAvailable=Cannot perform operation because the CRF is not available.
 rest.crfservice.crfWithIdDoesNotBelongToCurrentScope=Crf with id ''{0}'' does not belong to current scope.
