Fixed #3072: User is able to insert data into locked CRF version.. Submitted by: aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3658 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -1495,9 +1495,9 @@ you_can_access_spss  = \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043f\
 #you_can_access_tab_delimited  =  You can access your tab-delimited file <a href='AccessFile?fileId={0}'>here</a>.<br/>
 #you_can_access_tab_delimited  = Вы можете получить доступ к вашему файлу с разделителями  <a href='AccessFile?fileId={0}'>здесь</a>.<br/>
 you_can_access_tab_delimited  = \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u0432\u0430\u0448\u0435\u043c\u0443 \u0444\u0430\u0439\u043b\u0443\u0441 \u0440\u0430\u0437\u0434\u0435\u043b\u0438\u0442\u0435\u043b\u044f\u043c\u0438  <a href='AccessFile?fileId={0}'>\u0437\u0434\u0435\u0441\u044c</a>.<br/>
-#you_can_review_the_data  =  <p>You can review the entered data <a href='{0}ListStudySubjects'>here</a>.
-#you_can_review_the_data  =  <p>Вы можете проверить введенные данные <a href='{0}ListStudySubjects'>здесь</a>.
-you_can_review_the_data  =  <p>Вы можете проверить введенные данные <a href='{0}ListStudySubjects'>здесь</a>.
+#you_can_review_the_data  =  <p>You can review the entered data <a href='
+#you_can_review_the_data  =  <p>Вы можете проверить введенные данные <a href='
+you_can_review_the_data  =  <p>Вы можете проверить введенные данные <a href='
 #you_cannot_create_site_itself_site  =  You cannot create a site from a study that itself is a site. Please change your active study to a top-level study or contact your sysadmin.
 #you_cannot_create_site_itself_site  = Вы не можете создать центр в исследовании, которое само является центром. Пожалуйста измените уровень текущего исследования на верхний или свяжитесь со своим администратором.
 you_cannot_create_site_itself_site  = \u0412\u044b \u043d\u0435 \u043c\u043e\u0436\u0435\u0442\u0435 \u0441\u043e\u0437\u0434\u0430\u0442\u044c \u0446\u0435\u043d\u0442\u0440 \u0432 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0438\u002c \u043a\u043e\u0442\u043e\u0440\u043e\u0435 \u0441\u0430\u043c\u043e \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0446\u0435\u043d\u0442\u0440\u043e\u043c\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0438\u0437\u043c\u0435\u043d\u0438\u0442\u0435 \u0443\u0440\u043e\u0432\u0435\u043d\u044c \u0442\u0435\u043a\u0443\u0449\u0435\u0433\u043e \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u043d\u0430 \u0432\u0435\u0440\u0445\u043d\u0438\u0439 \u0438\u043b\u0438 \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441\u043e \u0441\u0432\u043e\u0438\u043c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c\u002e
@@ -1702,12 +1702,12 @@ your_listed_crf_in_the_file = \u0418\u0420\u041a \u0441\u043e\u0431\u044b\u0442\
 #problems_encountered_with_file = Problems encountered with file {0}: {1}<br/>
 #problems_encountered_with_file = Возникли проблемы с файлом  {0}: {1}<br/>
 problems_encountered_with_file = \u0412\u043e\u0437\u043d\u0438\u043a\u043b\u0438 \u043f\u0440\u043e\u0431\u043b\u0435\u043c\u044b \u0441 \u0444\u0430\u0439\u043b\u043e\u043c  {0}\u003a {1}<br/>
-#you_can_review_the_data_2 = /ListStudySubjects'>here</a> and the log messages <a href
-#you_can_review_the_data_2 = /ListStudySubjects'>здесь</a> и сообщения журнала <a href
-you_can_review_the_data_2 = /ListStudySubjects'>\u0437\u0434\u0435\u0441\u044c</a> \u0438 \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u044f \u0436\u0443\u0440\u043d\u0430\u043b\u0430 <a href
-#you_can_review_the_data_3 = /ViewLogMessage?n
-#you_can_review_the_data_3 = /ViewLogMessage?n
-you_can_review_the_data_3 = /\u0056\u0069\u0065\u0077\u004c\u006f\u0067\u004d\u0065\u0073\u0073\u0061\u0067\u0065\u003f\u006e
+#you_can_review_the_data_2 = ListStudySubjects'>here</a> and the log messages <a href='
+#you_can_review_the_data_2 = ListStudySubjects'>здесь</a> и сообщения журнала <a href='
+you_can_review_the_data_2 = ListStudySubjects'>\u0437\u0434\u0435\u0441\u044c</a> \u0438 \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u044f \u0436\u0443\u0440\u043d\u0430\u043b\u0430 <a href='
+#you_can_review_the_data_3 = ViewLogMessage?n=
+#you_can_review_the_data_3 = ViewLogMessage?n=
+you_can_review_the_data_3 = ViewLogMessage?n=
 #you_can_review_the_data_4 = '>here</a>.
 #you_can_review_the_data_4 = '>здесь</a>.
 you_can_review_the_data_4 = '>\u0437\u0434\u0435\u0441\u044c</a>.
@@ -2152,9 +2152,9 @@ study  = \u0418\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u043
 #import_job_msg  =  was not configured to replace existing data during import. Several items were skipped. You can find them in the audit log.
 #import_job_msg  = не был сконфигурирован для замены существующих данных во время импорта. Некоторые переменные были проущены. Вы можете найти их в контрольном журнале.
 import_job_msg  = \u043d\u0435 \u0431\u044b\u043b \u0441\u043a\u043e\u043d\u0444\u0438\u0433\u0443\u0440\u0438\u0440\u043e\u0432\u0430\u043d \u0434\u043b\u044f \u0437\u0430\u043c\u0435\u043d\u044b \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u044e\u0449\u0438\u0445 \u0434\u0430\u043d\u043d\u044b\u0445 \u0432\u043e \u0432\u0440\u0435\u043c\u044f \u0438\u043c\u043f\u043e\u0440\u0442\u0430\u002e \u041d\u0435\u043a\u043e\u0442\u043e\u0440\u044b\u0435 \u043f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u044b\u0435 \u0431\u044b\u043b\u0438 \u043f\u0440\u043e\u0443\u0449\u0435\u043d\u044b\u002e \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043d\u0430\u0439\u0442\u0438 \u0438\u0445 \u0432 \u043a\u043e\u043d\u0442\u0440\u043e\u043b\u044c\u043d\u043e\u043c \u0436\u0443\u0440\u043d\u0430\u043b\u0435\u002e
-#was_skipped  =  was skipped
-#was_skipped  = было пропущено
-was_skipped  = \u0431\u044b\u043b\u043e \u043f\u0440\u043e\u043f\u0443\u0449\u0435\u043d\u043e
+#was_skipped  =  Was skipped.
+#was_skipped  = Было пропущено.
+was_skipped  = \u0411\u044b\u043b\u043e \u043f\u0440\u043e\u043f\u0443\u0449\u0435\u043d\u043e\u002e
 ## ticket #480 = 
 ## ticket #480 = 
 # ticket #480 = 
