--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1836,7 +1836,7 @@ repeat_number = Repeat Number
 
 repeated_key = Repeat Key {0}
 
-will_be_skipped = will be skipped
+will_be_skipped = Will be skipped.
 
 repeating = Repeating
 
@@ -3792,6 +3792,11 @@ this_crf_version_has_associated_data = This CRF Version has associated data that
 this_crf_version_has_no_conflict_data = This CRF Version has no conflicting data, and can be deleted.  Please click 'Submit' to complete the operation.
 the_crf_version_has_been_removed = The CRF Version has been successfully removed
 you_are_trying_to_delete_last_version = You are trying to delete the last version of a CRF, and there is metadata at the CRF level that is preventing the delete. Please try to delete from the CRF level to review this metadata.
+crf_version_is_unavailable = CRF version is unavailable.
+crf_version_was_unavailable = CRF version was unavailable.
+import_contains_unavailable_crf_versions = Import contains data for unavailable CRF versions. This data will be skipped.
+import_contained_unavailable_crf_versions = Import contained data for unavailable CRF versions. This data was skipped.
+unavailable_crf_version_oids = Unavailable CRF version OIDs
 
 crfEvaluationTable.crfName=CRF Name
 crfEvaluationTable.studySubjectId=Study Subject ID
