--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2736,9 +2736,9 @@ repeat_number  = \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u
 #repeated_key  =  Repeat Key {0}
 #repeated_key  = Ключ повтора  {0}
 repeated_key  = \u041a\u043b\u044e\u0447 \u043f\u043e\u0432\u0442\u043e\u0440\u0430  {0}
-#will_be_skipped  =  will be skipped
-#will_be_skipped  = будет пропущено
-will_be_skipped  = \u0431\u0443\u0434\u0435\u0442 \u043f\u0440\u043e\u043f\u0443\u0449\u0435\u043d\u043e
+#will_be_skipped  =  Will be skipped.
+#will_be_skipped  = Будет пропущено.
+will_be_skipped  = \u0411\u0443\u0434\u0435\u0442 \u043f\u0440\u043e\u043f\u0443\u0449\u0435\u043d\u043e\u002e
 #repeating  =  Repeating
 #repeating  = Повторение
 repeating  = \u041f\u043e\u0432\u0442\u043e\u0440\u0435\u043d\u0438\u0435
