--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_es_MX.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_es_MX.properties
@@ -1409,7 +1409,7 @@ you_can_access_spss = Puede accesar a sus archivos SPSS <a href='AccessFile?file
 you_can_access_tab_delimited = Puede accesar a su archivo delimitado <a href='AccessFile?fileId={0}'>aqu\u00ED</a>.<br/>
 
 
-you_can_review_the_data = <p>Puede revisar los datos ingresados <a href='{0}ListStudySubjects'>aqu\u00ED</a>.
+you_can_review_the_data = <p>Puede revisar los datos ingresados <a href='
 
 
 you_cannot_create_site_itself_site = No puede crear un sitio desde un estudio que en s\u00ED es un sitio. Por favor cambie su estudio activo a un estudio de nivel superior o contacte a su administrador del sistema.
@@ -1584,9 +1584,9 @@ your_xml_in_the_file=Su XML en el archivo {0} est\u00E1 correctamente conformado
 your_listed_crf_in_the_file=Su CRF de Actividad listado en el archivo {0} no existe, o ya fue bloqueado para importarse.
 problems_encountered_with_file=Se encontraron probemas con el archivo {0}: {1}<br/>
 
-you_can_review_the_data_2=/ListStudySubjects'>aqu\u00ED</a> y los mensajes de registro <a href='
+you_can_review_the_data_2=ListStudySubjects'>aqu\u00ED</a> y los mensajes de registro <a href='
 
-you_can_review_the_data_3=/ViewLogMessage?n=
+you_can_review_the_data_3=ViewLogMessage?n=
 
 you_can_review_the_data_4='>aqu\u00ED</a>.
 
