--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
@@ -1477,9 +1477,9 @@ you_can_access_spss  = \u60a8\u53ef\u4ee5\u8bbf\u95ee\u60a8\u7684 \u0053\u0050\u
 #you_can_access_tab_delimited  =  You can access your tab-delimited file <a href='AccessFile?fileId={0}'>here</a>.<br/>
 #you_can_access_tab_delimited  = 您可以访问您以制表符分隔的文件 <a href='AccessFile?fileId={0}'> 此处</a>.<br/>
 you_can_access_tab_delimited  = \u60a8\u53ef\u4ee5\u8bbf\u95ee\u60a8\u4ee5\u5236\u8868\u7b26\u5206\u9694\u7684\u6587\u4ef6 <a href='AccessFile?fileId={0}'> \u6b64\u5904</a>.<br/>
-#you_can_review_the_data  =  <p>You can review the entered data <a href='{0}ListStudySubjects'>here</a>.
-#you_can_review_the_data  = 您可以查看输入的数据的 <p><a href='{0}ListStudySubjects'> 此处</a>
-you_can_review_the_data  = \u60a8\u53ef\u4ee5\u67e5\u770b\u8f93\u5165\u7684\u6570\u636e\u7684 <p><a href='{0}ListStudySubjects'>\u6b64\u5904</a>
+#you_can_review_the_data  =  <p>You can review the entered data <a href='
+#you_can_review_the_data  = 您可以查看输入的数据的 <p><a href='
+you_can_review_the_data  = \u60a8\u53ef\u4ee5\u67e5\u770b\u8f93\u5165\u7684\u6570\u636e\u7684 <p><a href='
 #you_cannot_create_site_itself_site  =  You cannot create a site from a study that itself is a site. Please change your active study to a top-level study or contact your sysadmin.
 #you_cannot_create_site_itself_site  = 不能从本身是站点的研究创建站点。请更改您的有效研究为顶级的研究或联系您的系统管理员。
 you_cannot_create_site_itself_site  = \u4e0d\u80fd\u4ece\u672c\u8eab\u662f\u7ad9\u70b9\u7684\u7814\u7a76\u521b\u5efa\u7ad9\u70b9\u3002\u8bf7\u66f4\u6539\u60a8\u7684\u6709\u6548\u7814\u7a76\u4e3a\u9876\u7ea7\u7684\u7814\u7a76\u6216\u8054\u7cfb\u60a8\u7684\u7cfb\u7edf\u7ba1\u7406\u5458\u3002
@@ -1684,15 +1684,15 @@ your_listed_crf_in_the_file = \u60a8\u5217\u51fa\u7684\u4e8b\u4ef6 \u0043\u0052\
 #problems_encountered_with_file = Problems encountered with file {0}: {1}<br/>
 #problems_encountered_with_file = 发生问题，文件 {0}: {1} <br/>
 problems_encountered_with_file = \u53d1\u751f\u95ee\u9898\uff0c\u6587\u4ef6 {0}\u003a {1} <br/>
-#you_can_review_the_data_2 = /ListStudySubjects'>here</a> and the log messages <a href
-#you_can_review_the_data_2 = / 列出研究对象 > 此处</a> 日志<a href
-you_can_review_the_data_2 = \u002f \u5217\u51fa\u7814\u7a76\u5bf9\u8c61 > \u6b64\u5904</a> \u65e5\u5fd7<a href
-#you_can_review_the_data_3 = /ViewLogMessage?n
-#you_can_review_the_data_3 = / 查看日志消息?n
-you_can_review_the_data_3 = \u002f \u67e5\u770b\u65e5\u5fd7\u6d88\u606f?n
+#you_can_review_the_data_2 = ListStudySubjects'>here</a> and the log messages <a href='
+#you_can_review_the_data_2 = 列出研究对象 > 此处</a> 日志<a href='
+you_can_review_the_data_2 = ListStudySubjects'> \u6b64\u5904</a> \u65e5\u5fd7<a href='
+#you_can_review_the_data_3 = ViewLogMessage?n=
+#you_can_review_the_data_3 = ViewLogMessage?n=
+you_can_review_the_data_3 = ViewLogMessage?n=
 #you_can_review_the_data_4 = '>here</a>.
-#you_can_review_the_data_4 =  > 此处</a>。
-you_can_review_the_data_4 =  > \u6b64\u5904</a>。
+#you_can_review_the_data_4 = '> 此处</a>.
+you_can_review_the_data_4 =  '> \u6b64\u5904</a>.
 ## 4593 =
 ## 4593 =
 # 4593 =
