Fixed #3019: CRF API: delete CRF / CRF Version. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3694 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -233,6 +233,12 @@ rest.crfservice.lockcrfversion.empty.id=Id parameter is empty.
 rest.crfservice.unlockcrfversion.missing.id=Id parameter is missing.
 rest.crfservice.unlockcrfversion.empty.id=Id parameter is empty.
 
+rest.crfservice.deletecrf.missing.id=Id parameter is missing.
+rest.crfservice.deletecrf.empty.id=Id parameter is empty.
+
+rest.crfservice.deletecrfversion.missing.id==Id parameter is missing.
+rest.crfservice.deletecrfversion.empty.id=Id parameter is empty.
+
 rest.studyservice.createstudy.userHasSiteLevelRoles=User ''{0}'' has site level roles that''s why he cannot be a study administrator.
 rest.studyservice.createstudy.userDoesNotExist=User ''{0}'' does not exist.
 rest.studyservice.createstudy.operationFailed=Failed to create study.
