--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3788,6 +3788,7 @@ evaluate = Evaluate
 crf_evaluation=CRF Evaluation
 
 confirm_deletion_of_crf_version = Confirm Deletion of CRF Version
+unable_to_delete_latest_crf_version = Unable to delete latest CRF version, please delete CRF itself.
 this_crf_version_has_associated_data = This CRF Version has associated data that is preventing its deletion.
 this_crf_version_has_no_conflict_data = This CRF Version has no conflicting data, and can be deleted.  Please click 'Submit' to complete the operation.
 the_crf_version_has_been_removed = The CRF Version has been successfully removed
