Fixed #3120: Create "Email Log" page with basic functionality. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3730 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4235,3 +4235,18 @@ integer.6 = 6
 confirmation_message = Confirmation Message
 propagate_change_message.1 = You changed the configuration of Event CRFs.
 propagate_change_message.2 = Do you want to update all your sites with the new configuration?
+
+email_log = Email Log
+email_log_for = Email Log for
+recipient = Recipient
+sender = Sender
+date_sent = Date Sent
+sent_by = Sent By
+
+email_status.TRUE = Sent
+email_status.FALSE = Failed
+
+email_action.RESET_PASSWORD = Reset password for user
+email_action.CASEBOOK_GENERATED = Casebook generated
+
+resend_email_tooltip = Resend this email.
