Fixed #3075: RS: User is able to enter > 255 characters into Rule Name. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3739 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3896,7 +3896,6 @@ rs.tooltip.addPopUp = Add a new box
 
 rs.message.clearExpression = Are you sure you want to clear the entire expression?
 rs.message.showHideEvaluation = Rule evaluation is not valid for a Show or Hide action. Please unselect True/False evaluation.
-rs.message.itemDoesNotExistInTheStudy = The target item does not exist in the current study.
 rs.message.serverIsNotAvailable = The server you are attempting to connect to appears to be unavailable at the moment. Please try again later.
 rs.message.enterNumber = Please enter a number
 rs.message.expressionWillBeLost = The current expression will be lost. Are you sure you want to select another study?
@@ -3904,7 +3903,8 @@ rs.message.selectAnAction = A rule is supposed to fire an action. Please select 
 rs.message.selectWhenRun = Please specify when the rule should be run.
 rs.message.selectEvaluate = A rule is supposed to evaluate to true or false. Please specify.
 rs.message.specifyTarget = Please specify a rule target
-rs.message.specifyDescription = Please specify the rule description
+rs.message.specifyDescription = Please specify the rule description.
+rs.message.descriptionLength = Rule name cannot be more than 255 characters in length.
 rs.message.specifyDiscrepancyText = A discrepancy action was selected but no discrepancy text has been specified.
 rs.message.invalidDiscrepancyText = This message cannot be more than 2000 characters in length.
 rs.message.invalidEmailText = This message cannot be more than 2000 characters in length.
