--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7057,9 +7057,6 @@ rs.message.clearExpression = \u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u
 #rs.message.showHideEvaluation = Rule evaluation is not valid for a Show or Hide action. Please unselect True/False evaluation.
 #rs.message.showHideEvaluation = Выбор "Если правило равно:" недопустим для правил с типом действия "Скрыть/Показать поле ИРК". Пожалуйста снимите выбор этого поля.
 rs.message.showHideEvaluation = \u0412\u044B\u0431\u043E\u0440 "\u0415\u0441\u043B\u0438 \u043F\u0440\u0430\u0432\u0438\u043B\u043E \u0440\u0430\u0432\u043D\u043E" \u043D\u0435\u0434\u043E\u043F\u0443\u0441\u0442\u0438\u043C \u0434\u043B\u044F \u043F\u0440\u0430\u0432\u0438\u043B \u0441 \u0442\u0438\u043F\u043E\u043C \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F "\u0421\u043A\u0440\u044B\u0442\u044C/\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043F\u043E\u043B\u0435 \u0418\u0420\u041A". \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u0441\u043D\u0438\u043C\u0438\u0442\u0435 \u0432\u044B\u0431\u043E\u0440 \u044D\u0442\u043E\u0433\u043E \u043F\u043E\u043B\u044F.
-#rs.message.itemDoesNotExistInTheStudy = The target item doesn't exist in the current study.
-#rs.message.itemDoesNotExistInTheStudy = Целевое поле не существует в текущем исследовании.
-rs.message.itemDoesNotExistInTheStudy = \u0426\u0435\u043B\u0435\u0432\u043E\u0435 \u043F\u043E\u043B\u0435 \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442 \u0432 \u0442\u0435\u043A\u0443\u0449\u0435\u043C \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0438.
 #rs.message.serverIsNotAvailable = The server you are attempting to connect to appears to be unavailable at the moment. Please try again later.
 #rs.message.serverIsNotAvailable = Сервер к которому вы пытаетесь получить доступ не доступен в данный момент. Пожалуйста попробуйте позже.
 rs.message.serverIsNotAvailable = \u0421\u0435\u0440\u0432\u0435\u0440 \u043A \u043A\u043E\u0442\u043E\u0440\u043E\u043C\u0443 \u0432\u044B \u043F\u044B\u0442\u0430\u0435\u0442\u0435\u0441\u044C \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0434\u043E\u0441\u0442\u0443\u043F \u043D\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u0435\u043D \u0432 \u0434\u0430\u043D\u043D\u044B\u0439 \u043C\u043E\u043C\u0435\u043D\u0442. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u043F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u043F\u043E\u0437\u0436\u0435.
@@ -7117,6 +7114,9 @@ rs.message.selectCRF = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0
 #rs.message.selectVersion = Please select CRF version before specifying target.
 #rs.message.selectVersion = Пожалуйста, выберите Версию ИРК перед указанием цели.
 rs.message.selectVersion = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0412\u0435\u0440\u0441\u0438\u044e \u0418\u0420\u041a \u043f\u0435\u0440\u0435\u0434 \u0443\u043a\u0430\u0437\u0430\u043d\u0438\u0435\u043c \u0446\u0435\u043b\u0438\u002e
+#rs.message.descriptionLength = Rule name cannot be more than 255 characters in length.
+#rs.message.descriptionLength = Длина имени правила не должна превышать 255 символов.
+rs.message.descriptionLength = \u0414\u043b\u0438\u043d\u0430 \u0438\u043c\u0435\u043d\u0438 \u043f\u0440\u0430\u0432\u0438\u043b\u0430 \u043d\u0435 \u0434\u043e\u043b\u0436\u043d\u0430 \u043f\u0440\u0435\u0432\u044b\u0448\u0430\u0442\u044c \u0032\u0035\u0035 \u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u002e
 
 #rs.validation.result = Rule validation results
 #rs.validation.result = Результат валидации правила
