Fixed #3031: API should support token based authentication. Submitted by: aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3748 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -2,7 +2,7 @@
 rest.system.error=System error has occurred.
 
 ##PermissionChecker
-rest.userShouldBeAuthenticated=User should be authenticated.
+rest.userMustBeAuthenticated=User must be authenticated.
 
 ##RestConversionService
 rest.wrongDateParameterType=Parameter ''{0}'' should be a date in the following format: {1}.
@@ -10,7 +10,7 @@ rest.wrongParameterType=Parameter ''{0}'' should be {1}.
 
 ##RequestParametersValidator
 rest.scopeIsRequired=Scope is required.
-rest.eachRequestMustHaveVersionParameter=Each request must have ''{0}'' parameter.
+rest.eachRequestMustHaveParameter=Each request must have ''{0}'' parameter.
 rest.possibleValuesAre=The possible values for parameter ''{0}'' are the ''{1}''.
 rest.possibleValuesWithDescriptionsAre=The possible values for parameter ''{0}'' are the ''{1}'' where the ''{2}''.
 rest.thereIsTypoInTheParameter=There is a typo in the parameter ''{0}''.
@@ -44,6 +44,8 @@ rest.endPoint.valueDescription=0 -> Empty Value, 1 -> Safety, 2 -> Efficacy, 3 -
 
 rest.wadl.title=ClinCapture REST API Service WADL.
 
+rest.authenticationservice.tokenExpired=Token expired.
+rest.authenticationservice.wrongUserRoleIsPresent=Wrong user role is present.
 rest.authenticationservice.userIsNotAssignedToStudy=User is not assigned to study.
 rest.authenticationservice.studyMustBeStudy=The ''${0}'' is site. The scope must be a study.
 rest.authenticationservice.wrongStudyName=No study found for specified study name.
