Fixed #3147: App does not consider the default setting of the "Token Expiration Date" system property. Submitted by: aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3752 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/rest_en.properties
@@ -47,7 +47,7 @@ rest.wadl.title=ClinCapture REST API Service WADL.
 rest.authenticationservice.tokenExpired=Token expired.
 rest.authenticationservice.wrongUserRoleIsPresent=Wrong user role is present.
 rest.authenticationservice.userIsNotAssignedToStudy=User is not assigned to study.
-rest.authenticationservice.studyMustBeStudy=The ''${0}'' is site. The scope must be a study.
+rest.authenticationservice.studyMustBeStudy=The ''{0}'' is site. The scope must be a study.
 rest.authenticationservice.wrongStudyName=No study found for specified study name.
 rest.authenticationservice.onlyRootOrStudyAdministratorCanBeAuthenticated=Only root or study administrator can be authenticated.
 rest.authenticationservice.onlyUsersWithTypeAdministratorCanBeAuthenticated=Only users with type administrator can be authenticated.
