Fix #3078: RS: User is able to enter > 500 characters into Insert Rule Value. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3760 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3921,6 +3921,7 @@ rs.message.checkLog = The rule was not saved! Check the server logs for details
 rs.message.selectEvent = Please select Event before specifying target.
 rs.message.selectCRF = Please select CRF before specifying target.
 rs.message.selectVersion = Please select CRF Version before specifying target.
+rs.message.insertValueLength = Value to insert cannot be more than 500 characters in length.
 
 rs.validation.result = Rule validation results:
 rs.validation.valid = Rule is valid
