--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3642,8 +3642,8 @@ systemProperty.passwdExpirationTime.label=
 systemProperty.passwdExpirationTime.description=
 systemProperty.change_passwd_required.label=
 systemProperty.change_passwd_required.description=
-systemProperty.tokenExpirationDate.label=Token expiration date
-systemProperty.tokenExpirationDate.description=This parameter specifies the number of hours to expire the authentication token on the REST API. \
+systemProperty.tokenExpirationInHours.label=Token expiration
+systemProperty.tokenExpirationInHours.description=This parameter specifies the number of hours to expire the authentication token on the REST API. \
   When the token is expired, the client is expected to re-authenticate. Zero value disables expiration.
 
 systemProperty.FacName.label=Facility Name
