--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4254,3 +4254,6 @@ email_action.RESET_PASSWORD = Reset password for user
 email_action.CASEBOOK_GENERATED = Casebook generated
 
 resend_email_tooltip = Resend this email.
+
+view_email_log_details = View Email Log Details
+email_log_details = Email Log Details
